# hand

./: README.md
20231102/: 00.txt  CMakeLists.txt  test01.cpp  test02.cpp  test03.cpp  ubuntu常见命令.txt
HandwrittenNumeralRecognition/: Mobilenetv2 - 副本.py  Mobilenetv2.py  Mobilenetv2_025.py  mobilenet_025_size_3_224_224_98_0.011802.onnx  mobilenet_025_size_3_224_224_9_0.103646.jit  pth_2_onnx.py  test.py  test_jit.py  test_me.py  test_one_image.py  test_torch_and_onnx_is_same.py  trainer.py
HandwrittenNumeralRecognition/data_to/: get_test_label.py  get_train_label.py  test_label.txt  test_label_one_image.txt  test_to.py  train_label.txt  train_to.py
HandwrittenNumeralRecognition/dataset/: dataset.py
HandwrittenNumeralRecognition/pre_result/param_2023_0515/: 145_0.010024.txt  145_0.010024_pre_result.txt  28_0.05642.txt  28_0.05642_pre_result.txt  43_0.035513.txt  43_0.035513_pre_result.txt  65_0.026348.txt  65_0.026348_pre_result.txt
HandwrittenNumeralRecognition/pre_result/param_2023_0517_Mobilenetv2_025_batchsize_8/: 60_0.018871.txt  60_0.018871_pre_result.txt  73_0.016557.txt  82_0.014672.txt  88_0.012496.txt  88_0.012496_pre_result.txt  96_0.012206.txt  98_0.011802.txt  98_0.011802_pre_result.txt
HandwrittenNumeralRecognition/pre_result_one_image/param_2023_0517_Mobilenetv2_025_batchsize_8/: 98_0.011802.txt  98_0.011802_pre_result.txt
HandwrittenNumeralRecognition/save_models/param_2023_0515/: 0_1.248215.pth  109_0.016143.pth  10_0.132576.pth  110_0.015791.pth  111_0.015662.pth  112_0.014382.pth  (+43 more)
HandwrittenNumeralRecognition/utils/: utils.py
(+57 files in other folders)
